Fix more spacing for my other two pages

--- a/screen.css
+++ b/screen.css
@@ -55,7 +55,9 @@ h2 {
   color: #4d8fac;
 
 }
-#about{
+#about,
+#contact,
+#intro{
   padding-top: 3.688em;
 }
 
